2007-12-19  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/Makefile.am:
	* data/ui:
	* data/icons: Add new icons from Andreas Nilsson, fixes bug
	#463131.

2007-12-19  Richard Hult  <richard@imendio.com>


	* data/ui/window.ui:
	* src/Yelper.cpp:
	* src/Yelper.h:
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h:
	* src/dh-html.c: (dh_html_search_find_again):
	* src/dh-html.h:
	* src/dh-window.c: (dh_window_get_type), (window_class_init),
	(window_init), (window_finalize), (window_activate_quit),
	(window_activate_copy), (window_activate_find): Fix bug #144517,
	patch from Cosimo Cecchi. Adds zoom actions.

2007-12-19  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_open_new_tab), (window_new_tab_label),
	(window_get_active_html), (window_update_title),
	(window_tab_set_title): Fix bug #479306, patch from Cosimo Cecchi,
	adds close button to tabs.

2007-12-03  Richard Hult  <richard@imendio.com>

	* src/Yelper.cpp: Patch from Matthias Clasen to fix bug #499050,
	building against xulrunner 1.9.

2007-10-22  Richard Hult  <richard@imendio.com>

	* configure.in.
	* libdevhelp-1.0.pc.in (Requires): Remove libgnomeui and
	gnome-vfs, as they are no longer used. Also make libwnk optional.
	Fixes bug #484896.

2007-10-08  Richard Hult  <richard@imendio.com>

	* configure.in: Move lanuage list to po/LINGUAS, fixes bug
	#464108 (Gilles Dartiguelongue).

2007-10-06  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in:
	* src/dh-base.c:
	* src/dh-main.c: Make libwnck optional.

	* misc/gedit-plugin/Makefile.am: Use a non-gnumake specific rule.

2007-10-06  Richard Hult  <richard@imendio.com>

	Release 0.16.1.

2007-10-06  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

2007-09-10  Richard Hult  <richard@imendio.com>

	* Release 0.16.

	* configure.in: Bump version.

2007-09-05  Jonh Wendell  <jwendell@gnome.org>

	* misc/gedit-plugin/devhelp.gedit-plugin.desktop.in: Updated