@@ -1,5 +1,10 @@
 2007-12-19  Richard Hult  <richard@imendio.com>
 
+	* src/dh-main.c: (main): Fix bug #354895, Devhelp doesn't run new
+	instance on new display.
+
+2007-12-19  Richard Hult  <richard@imendio.com>
+
 	* configure.in:
 	* data/Makefile.am:
 	* data/ui:
